[package]
name = "dol_cxx_patch_generator"
version = "0.1.0"
authors = ["Pwootage <pwootage@gmail.com>"]
edition = "2018"


[dependencies]
clap = "2"
enum-map = "0.6"
goblin = "0.1"
memmap = "0.7"
scroll = { version = "0.10", features = ["derive"] }
snafu = "0.6"
reader_writer = { path = "../reader_writer" }
dol_linker = { path = "../dol_linker" }
structs = { path = "../structs" }
